<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLite_Test</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="sqlite_test">SQLite数据库演示代码</string>
    <string name="input_name">请输入姓名</string>
    <string name="input_age">请输入年龄</string>
    <string name="input_number">请输入学号</string>
    <string name="input_class">请输入专业和班级</string>
    <string name="sex_man">男</string>
    <string name="sex_woman">女</string>
    <string name="option_add">新增</string>
    <string name="option_cancel">取消</string>
    
</resources>
