<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical" >
    
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:textSize="20sp"
	    android:hint="@string/input_name"
	    android:id="@+id/edit_name"
	    android:drawableLeft="@drawable/name"
	    android:drawablePadding="10dp"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    >
		<EditText 
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:textSize="20sp"
		    android:hint="@string/input_age"
		    android:id="@+id/edit_age"
		    android:numeric="integer"
		    android:drawableLeft="@drawable/age"
	    	android:drawablePadding="10dp"
		    />	    
		<RadioGroup 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:id="@+id/rg_sex"
		    >
		    <RadioButton 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:id="@+id/sex_man"
	    		android:textSize="20sp"
		        android:text="@string/sex_man"
		        />
		    <RadioButton 
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
	    		android:textSize="20sp"
		        android:id="@+id/sex_woman"
		        android:text="@string/sex_woman"
		        />		    
		</RadioGroup>
	</LinearLayout>

	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textSize="20sp"
	    android:hint="@string/input_number"
	    android:id="@+id/edit_number"
	    android:numeric="integer"
	    android:drawableLeft="@drawable/number"
	    android:drawablePadding="10dp"
	    />	
	<EditText 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:textSize="20sp"
	    android:hint="@string/input_class"
	    android:id="@+id/edit_class"
	    android:drawableLeft="@drawable/myclass"
	    android:drawablePadding="10dp"
	    />
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal"
	    android:layout_marginTop="10dp"
	    >
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	    	android:textSize="20sp"
	        android:text="@string/option_add"
	        android:id="@+id/register_add"
	        android:background="@drawable/button"
	        android:textColor="@color/white"
	        />
	    <Button 
	        android:layout_width="wrap_content"
	        android:layout_height="40dp"
	        android:layout_weight="1"
	   	 	android:textSize="20sp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/option_cancel"
	        android:id="@+id/register_cancel"
	        android:background="@drawable/button"
	        android:textColor="@color/white"
	        />	    
	</LinearLayout>
</LinearLayout>
